[package]
name = "cobalto"
version = "0.1.0"
edition = "2024"
description = "A fast, batteries-included web framework for Rust, inspired by Django and Laravel."
license = "MIT"
repository = "https://github.com/cobaltoproject/cobalto"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
log = "0.4"
regex = "1.11.1"
once_cell = "1.21.3"
notify = "8.0.0"
axum = { version = "0.8", features = ["ws"] }
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
async-trait = "0.1.88"
sqlx = { version = "0.8.5", features = ["sqlite", "runtime-tokio-native-tls", "macros", "migrate"] }
inventory = "0.3.20"
quote = "1.0.40"
syn = { version = "2.0.101", features = ["full"] }
proc-macro2 = "1.0.95"
cobalto_derive = { path = "../cobalto_derive" }
sha2 = "0.10.9"
walkdir = "2.5.0"
